assets/css/style.css
/*-- Get Google Font --*/
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;200;300;400;500;600;700&display=swap');

/*-- Generic Styling used across the page --*/
body {
    font-family: Lato, Helvetica, sans-serif;
}

.lighter-text {
    font-weight: 300;
    margin-bottom: 0.5rem;
}

.text-justify {
    text-align: justify;
}

.clickable {
    cursor: pointer;
}

.clickable:hover {
    color:#57245E;
    background-color: #efdef2;
    border-radius: 10px;
}

.purple {
    background-color: #8e4e99;
}

.scroll-top {
    scroll-margin-top: 4rem;
}

/*-- Nav Bar --*/

.logo {
    font-size: 30px;
    font-weight: 700;
    color: #fff;
}

.logo:hover {
    color: #57245E;
    background-color: #efdef2;
}

.quick-link {
    font-size: 30px;
    font-weight: 500;
    color: #fff;
    cursor: pointer;
}

.quick-link:hover {
    color: #fff;
    background-color: #57245E;
}

.hamburger {
    border: solid 1px #57245E;
    border-radius: 0.25rem;
    background-color: white;
    padding: 10px 12px;
    margin: 5px 0;
}

.fte-toggler-icon {
    background-image: url(../images/icons8-menu.svg);
}

.link-toggler-icon {
    background-image: url(../images/on.svg);
    display: inline-block;
    width: 0.75em;
    height: 0.75em;
    vertical-align: middle;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100%;
    margin: 0 0.25em 0 0;
}

  /* Display/hide Hamburger/Standard nav at tablet breakpoint */
@media (min-width: 768px) {
    #calcnavlinks {
        display: block;
    }
}

  /* Padding so that fixed nav does not block top of content, fixed or dynamic */
#empty-div-top {
    padding-top: 4rem;
}

/* About Section */
#blackboard {
    height: 30vh;

    background: url("../images/blackboard.jpg") no-repeat center center;
    background-size: cover;
}

/* Calculator */

#region-chooser p {
    margin-bottom: 0;
}

/* Set styles for Calculator buttons */
.calculator-btn {
    background-color: #efdef2;
    border-color: #8e4e99;
    margin-bottom: 5px;
}

.calculator-btn:hover {
    background-color: #8e4e99;
    border: solid 1px #57245E;
}

.calculator-btn:focus {
    box-shadow: 0 0 0 0.25rem #8e4e997e;
}

.disc-btn {
    display: inline-block;
    background-color: #efdef2;
    border: solid 1px #8e4e99;
    width: 38px;
    height: 38px;
    padding: 12px 0;
    border-radius: 50%;
    line-height: 10px;
}

.disc-btn:hover {
    background-color: #8e4e99;
    border: solid 1px #57245E;
}

.disc-btn:focus {
    box-shadow: 0 0 0 0.25rem #8e4e997e;
}

.selected-btn {
    background-color: #8e4e99;
    border: solid 1px #57245E;
}

/* Set style for Grade & SCP button buckets to stop them getting too wide */
.btn-bucket {
    width: 150px;
    margin: 0 auto;
}

/* Style check section for full time salary, must appear non-interactive */
.ft-check {
    width: 100px;
    height: 38px;
    border: solid 1px #a1a1a1;
    border-radius: 0.25rem;
    background-color: #eeeeee;
    margin: 0 auto;
    padding: 5px 0;
}

/* Style numerical input fields */
.number-box {
    width: 80px;
    height: 38px;
    border: solid 1px #8e4e99;
    border-radius: 0.25rem;
    margin: 0 auto;
    padding: 5px 0;
    text-align: right;
}

.number-box:hover {
    background-color: #efdef2;
}

.number-box:focus {
    box-shadow: 0 0 0 0.25rem #8e4e997e;
}

/* Make step numbers stand out for clearer intuitive use */
.step-no {
    background-color:#a1a1a1;
    border: solid 1px #000;
    border-radius: 50%;
    padding: 0.1rem 0.4rem;
}

/* Progress Bar */
#progress-bar {
    width: 100%;
    background-color: #a1a1a1;
}

.bar-start {
    width: 1%;
    height: 25px;
    background-color: #efdef2;
    padding-right: 3px;
}

/* Results*/

#results {
    border: solid 1px #a1a1a1;
    border-radius: 10px;
}

/* More Information */

#more-info a {
    color: #57245E;
}

#empty-div-bottom {
    padding-bottom: 8rem;
}

@media (max-width: 767px) {
    #empty-div-bottom {
        padding-bottom: 10rem;}
}

/* Footer */

#page-container {
    position: relative;
    min-height: 100vh;
}

footer {
    background-color: #efdef2;
    position: absolute;
    bottom: 0;
    width: 100%;
}

.contact-btn {
    background-color: #8E4E99;
    margin-left: 10px;
    border: solid 1px #57245E;
}

.contact-btn:hover {
    background-color: #57245E;
    color: #fff;
}

.contact-btn:focus {
    box-shadow: 0 0 0 0.25rem #8e4e997e;
}

/* Set minimum height for map div where not determined by row content */
@media (max-width: 768px) {
    #map {
        min-height: 25rem;
    }
}

/* 404 Page */
.redirect-btn {
    background-color: #8E4E99;
    border: solid 1px #57245E;
    font-size: 2rem;
}

.redirect-btn:hover {
    background-color: #57245E;
    color: #fff;
}

.redirect-btn:focus {
    box-shadow: 0 0 0 0.25rem #8e4e997e;
}

/* For Printing (primarily to PDF) */

@media print {
    nav, footer, #about-fte-calc, #more-info, #empty-div, #results h1 {
        display: none;
    }

    body {
        margin-top: 0;
        padding-top: 0;
    }

    .print-half {
        width: 50%;
        float: left;
    }

    .print-third {
        width: 33%;
        float: left;
    }
    
    #results {
        margin: 0;
        padding: 10px 0 0 0 !important;
    }
}

